--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #000;
 }
+
 header {
     background-color: #333;
     color: #fff;
@@ -12,24 +13,32 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+main {
+    text-align: center;
+    padding: 20px;
+}
+
 .logo {
     display: inline-block;
     text-align: left;
     font-size: 24px;
     margin-right: 20px;
 }
+
 .login {
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
 }
+
 .input-container {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px 0;
 }
+
 .input-container input[type="text"],
 .input-container input[type="password"] {
     width: 50%;
@@ -37,6 +46,7 @@ header {
     margin: 0 10px;
     border: 1px solid #ccc;
 }
+
 .input-container button {
     background-color: #D0B312;
     color: #000;
@@ -44,52 +54,78 @@ header {
     border: none;
     cursor: pointer;
 }
+
 .bottom-options {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px 0;
 }
+
 .bottom-options a {
     text-decoration: none;
     color: #D0B312;
     margin: 0 10px;
 }
+
 .menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #333;
 }
+
 .menu li {
     display: inline;
     margin-right: 20px;
 }
+
 .menu a {
     text-decoration: none;
     color: #808080;
     text-align: center;
 }
+
 .banner {
     background-image: url('C:\AAPROZ\bannerPromo.jpg');
     background-size: cover;
     height: 410px;
     background-position: center center;
 }
+
 .filters {
     background-color: #000;
     padding: 20px;
 }
+
+video {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    margin: 0 auto;
+    display: block;
+}
+
+video::-webkit-media-controls {
+    color: #D0B312;
+}
+
+video::-webkit-media-controls-enclosure {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
 form {
     max-width: 500px;
     margin: 0 auto;
     padding: 20px;
 }
+
 label {
     display: block;
     margin-bottom: 10px;
     color: #808080;
 }
+
 input[type="text"],
 textarea,
 select {
@@ -98,6 +134,7 @@ select {
     margin-bottom: 15px;
     border: 1px solid #ccc;
 }
+
 button {
     background-color: #D0B312;
     color: #000;
@@ -105,10 +142,12 @@ button {
     border: none;
     cursor: pointer;
 }
+
 .content {
     display: flex;
     flex-wrap: wrap;
 }
+
 .content .item {
     flex: 1;
     padding: 20px;
@@ -116,62 +155,142 @@ button {
     color: #808080;
     background-color: #000;
 }
+
 .comment {
     border: 1px solid #ccc;
     padding: 10px;
     margin: 10px;
 }
+
 .comment img {
     max-width: 100%;
 }
+
 .comment-form {
     background-color: #000;
     padding: 20px;
 }
+
 h1 {
     color: #808080;
     text-align: center;
 }
+
 h2 {
     color: #808080;
     text-align: center;
 }
+
 h3 {
     color: #808080;
     text-align: center;
 }
+p {
+    color: #D0B312;
+    text-align: center;
+    width: 250px;
+    height: 250px;
+}
+
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
     padding: 10px 0;
 }
- 
+
 .footer ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        background-color: #333;
-    }
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #333;
+}
+
 .footer li {
-        display: inline;
-        margin-right: 20px;
-    }
+    display: inline;
+    margin-right: 20px;
+}
+
 .footer a {
-        text-decoration: none;
-        color: #808080;
-        text-align: center;
-    }
+    text-decoration: none;
+    color: #808080;
+    text-align: center;
+}
+
 .imagem1 {
     width: 100%;
     height: auto;
     display: block;
 }
-.imagem2 {
-    width: "100" /* Defina a largura da imagem como 100% da largura da janela de visualização */
-    height "10"
-    display  block; /* Remova espaços em branco extras abaixo da imagem */
-    float: left; /* Alinha a imagem à esquerda */
-    margin-right: 10
 
+.imagem2 {
+    width: "100"
+        /* Defina a largura da imagem como 100% da largura da janela de visualização */
+        height "10"
+        display block;
+    /* Remova espaços em branco extras abaixo da imagem */
+    float: left;
+    /* Alinha a imagem à esquerda */
+    margin-right: 10
+}
+.container {
+    position: right;
+    padding: 15px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.gallery {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 15px;
+    width: 500%;
+    animation-name: animacao;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+}
+.item {
+    width: 250px;
+    height: 250px;
+    flex-shrink: 0;
+    transition: all 500ms ease-in-out;
+    opacity: 0.5;
+    width: 500%;
+}
+
+@keyframes animacao {
+    0% {
+        margin-left: 0;
+    }
+
+    20% {
+        margin-left: 0;
+    }
+
+    25% {
+        margin-left: -100%;
+    }
+
+    45% {
+        margin-left: -100%;
+    }
+
+    50% {
+        margin-left: -200%;
+    }
+
+    70% {
+        margin-left: -200%;
+    }
+
+    75% {
+        margin-left: -300%;
+    }
+
+    95% {
+        margin-left: -300%;
+    }
+
+    100% {
+        margin-left: -400%;
+    }
 }
