--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #000;
+    background-color: black;
 }
 
 header {
-    background-color: #333;
+    background-color: black;
     color: #fff;
     padding: 10px 0;
     display: flex;
