--- a/style.css
+++ b/style.css
@@ -13,9 +13,15 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
 main {
     text-align: center;
     padding: 20px;
+}
+section{
+    display: block;
+    padding: auto;
+    margin: auto;
 }
 
 .logo {
@@ -116,7 +122,7 @@ video::-webkit-media-controls-enclosure {
 
 form {
     max-width: 500px;
-    margin: 0 auto;
+    margin:  auto;
     padding: 20px;
 }
 
@@ -145,7 +151,9 @@ button {
 
 .content {
     display: flex;
-    flex-wrap: wrap;
+    padding: 13%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content .item {
@@ -154,12 +162,12 @@ button {
     text-align: center;
     color: #808080;
     background-color: #000;
+    margin: auto;
 }
 
 .comment {
     border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px;
+
 }
 
 .comment img {
@@ -169,7 +177,10 @@ button {
 .comment-form {
     background-color: #000;
     padding: 20px;
+    margin: auto;
 }
+
+
 
 h1 {
     color: #808080;
@@ -185,6 +196,7 @@ h3 {
     color: #808080;
     text-align: center;
 }
+
 p {
     color: #D0B312;
     text-align: center;
@@ -197,6 +209,9 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer ul {
@@ -225,20 +240,20 @@ footer {
 
 .imagem2 {
     width: "100"
-        /* Defina a largura da imagem como 100% da largura da janela de visualização */
-        height "10"
-        display block;
-    /* Remova espaços em branco extras abaixo da imagem */
+    height "10"
+    display block;
     float: left;
-    /* Alinha a imagem à esquerda */
+
     margin-right: 10
 }
+
 .container {
     position: right;
     padding: 15px;
     max-width: 100%;
     margin: 0 auto;
 }
+
 .gallery {
     display: flex;
     flex-flow: row nowrap;
@@ -248,6 +263,7 @@ footer {
     animation-duration: 20s;
     animation-iteration-count: infinite;
 }
+
 .item {
     width: 250px;
     height: 250px;
