--- a/style.css
+++ b/style.css
@@ -1,21 +1,32 @@
+* {
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: #000;
 }
 
 header {
-    background-color: black;
+    background-color: #333;
     color: #fff;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 main {
     text-align: center;
     padding: 20px;
+}
+section{
+    display: block;
+    padding: auto;
+    margin: auto;
 }
 
 .logo {
@@ -116,7 +127,7 @@ video::-webkit-media-controls-enclosure {
 
 form {
     max-width: 500px;
-    margin: 0 auto;
+    margin:  auto;
     padding: 20px;
 }
 
@@ -145,7 +156,9 @@ button {
 
 .content {
     display: flex;
-    flex-wrap: wrap;
+    padding: 13%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content .item {
@@ -154,12 +167,12 @@ button {
     text-align: center;
     color: #808080;
     background-color: #000;
+    margin: auto;
 }
 
 .comment {
     border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px;
+
 }
 
 .comment img {
@@ -169,7 +182,10 @@ button {
 .comment-form {
     background-color: #000;
     padding: 20px;
+    margin: auto;
 }
+
+
 
 h1 {
     color: #808080;
@@ -185,36 +201,12 @@ h3 {
     color: #808080;
     text-align: center;
 }
+
 p {
     color: #D0B312;
     text-align: center;
     width: 250px;
     height: 250px;
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-}
-
-.footer ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #333;
-}
-
-.footer li {
-    display: inline;
-    margin-right: 20px;
-}
-
-.footer a {
-    text-decoration: none;
-    color: #808080;
-    text-align: center;
 }
 
 .imagem1 {
@@ -225,20 +217,20 @@ footer {
 
 .imagem2 {
     width: "100"
-        /* Defina a largura da imagem como 100% da largura da janela de visualização */
-        height "10"
-        display block;
-    /* Remova espaços em branco extras abaixo da imagem */
+    height "10"
+    display block;
     float: left;
-    /* Alinha a imagem à esquerda */
+
     margin-right: 10
 }
+
 .container {
     position: right;
     padding: 15px;
     max-width: 100%;
     margin: 0 auto;
 }
+
 .gallery {
     display: flex;
     flex-flow: row nowrap;
@@ -248,6 +240,7 @@ footer {
     animation-duration: 20s;
     animation-iteration-count: infinite;
 }
+
 .item {
     width: 250px;
     height: 250px;
