--- a/style.css
+++ b/style.css
@@ -5,48 +5,11 @@
 }
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #000;
 }
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 
 main {
     text-align: center;
     padding: 20px;
-}
-section{
-    display: block;
-    padding: auto;
-    margin: auto;
-}
-section{
-    display: block;
-    padding: auto;
-    margin: auto;
-}
-
-.logo {
-    display: inline-block;
-    text-align: left;
-    font-size: 24px;
-    margin-right: 20px;
-}
-
-.login {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
 }
 
 .input-container {
@@ -76,31 +39,13 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 0;
+    margin: 0;
 }
 
 .bottom-options a {
     text-decoration: none;
     color: #D0B312;
-    margin: 0 10px;
-}
-
-.menu ul {
-    list-style-type: none;
     margin: 0;
-    padding: 0;
-    background-color: #333;
-}
-
-.menu li {
-    display: inline;
-    margin-right: 20px;
-}
-
-.menu a {
-    text-decoration: none;
-    color: #808080;
-    text-align: center;
 }
 
 .banner {
@@ -115,20 +60,10 @@ section{
     padding: 20px;
 }
 
-video {
-    width: 100%;
-    max-width: 800px;
-    height: auto;
-    margin: 0 auto;
-    display: block;
-}
-
-video::-webkit-media-controls {
-    color: #D0B312;
-}
-
-video::-webkit-media-controls-enclosure {
-    background-color: rgba(0, 0, 0, 0.8);
+.item{
+    overflow: scroll;
+    scrollbar-color: transparent;
+    scrollbar-width: thin; 
 }
 
 form {
@@ -179,12 +114,11 @@ button {
     background-color: #000;
     margin: auto;
     margin: auto;
+    overflow: scroll;
 }
 
 .comment {
     border: 1px solid #ccc;
-
-
 }
 
 .comment img {
@@ -197,10 +131,6 @@ button {
     margin: auto;
     margin: auto;
 }
-
-
-
-
 
 h1 {
     color: #808080;
@@ -223,34 +153,7 @@ p {
     text-align: center;
     width: 250px;
     height: 250px;
-}
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #333;
-}
-
-.footer li {
-    display: inline;
-    margin-right: 20px;
-}
-
-.footer a {
-    text-decoration: none;
-    color: #808080;
-    text-align: center;
 }
 
 .imagem1 {
@@ -263,11 +166,7 @@ footer {
     width: "100"
     height "10"
     display block;
-    height "10"
-    display block;
     float: left;
-
-
     margin-right: 10
 }
 
@@ -279,18 +178,6 @@ footer {
     margin: 0 auto;
 }
 
-
-.gallery {
-    display: flex;
-    flex-flow: row nowrap;
-    gap: 15px;
-    width: 500%;
-    animation-name: animacao;
-    animation-duration: 20s;
-    animation-iteration-count: infinite;
-}
-
-
 .item {
     width: 250px;
     height: 250px;
@@ -298,42 +185,4 @@ footer {
     transition: all 500ms ease-in-out;
     opacity: 0.5;
     width: 500%;
-}
-
-@keyframes animacao {
-    0% {
-        margin-left: 0;
-    }
-
-    20% {
-        margin-left: 0;
-    }
-
-    25% {
-        margin-left: -100%;
-    }
-
-    45% {
-        margin-left: -100%;
-    }
-
-    50% {
-        margin-left: -200%;
-    }
-
-    70% {
-        margin-left: -200%;
-    }
-
-    75% {
-        margin-left: -300%;
-    }
-
-    95% {
-        margin-left: -300%;
-    }
-
-    100% {
-        margin-left: -400%;
-    }
 }
