--- a/style.css
+++ b/style.css
@@ -60,11 +60,6 @@ main {
     padding: 20px;
 }
 
-.item{
-    overflow: scroll;
-    scrollbar-color: transparent;
-    scrollbar-width: thin; 
-}
 
 form {
     max-width: 500px;
@@ -98,12 +93,10 @@ button {
 
 .content {
     display: flex;
-    padding: 13%;
+    padding: 20px;
     justify-content: space-between;
     align-items: center;
-    padding: 13%;
-    justify-content: space-between;
-    align-items: center;
+    overflow: hidden;
 }
 
 .content .item {
@@ -113,8 +106,21 @@ button {
     color: #808080;
     background-color: #000;
     margin: auto;
-    margin: auto;
-    overflow: scroll;
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-color: transparent transparent;
+}
+
+.content .item::-webkit-scrollbar {
+    width: 10px; /* Largura da barra de rolagem */
+}
+
+.content .item::-webkit-scrollbar-thumb {
+    background: transparent; /* Cor da barra de rolagem */
+}
+
+.content .item::-webkit-scrollbar-track {
+    background: transparent; /* Cor do fundo da barra de rolagem */
 }
 
 .comment {
@@ -128,7 +134,6 @@ button {
 .comment-form {
     background-color: #000;
     padding: 20px;
-    margin: auto;
     margin: auto;
 }
 
@@ -154,6 +159,14 @@ p {
     width: 250px;
     height: 250px;
 
+}
+
+.texto {
+    color: #ccc;
+    text-align: center;
+    width: 250px;
+    height: auto;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .imagem1 {
@@ -183,6 +196,27 @@ p {
     height: 250px;
     flex-shrink: 0;
     transition: all 500ms ease-in-out;
-    opacity: 0.5;
+    opacity: 100;
     width: 500%;
 }
+
+#nome {
+    color: #D0B312;
+}
+
+#comentario {
+    color: #D0B312;
+}
+
+#nota {
+    color: #D0B312;
+}
+
+.star-rating {
+    font-size: 24px; /* Ajuste o tamanho das estrelas conforme necessário */
+    padding: 5px;
+    border: none;
+    background-color: transparent;
+}
+
+
