--- a/style.css
+++ b/style.css
@@ -235,4 +235,10 @@ p .texto {
     margin-top: 10px;
 }
 
+.star2 {
+    display: inline-block;
+    padding: 5px;
+    color: #D0B312;
+    cursor: default;
+}
 
