--- a/Home.css
+++ b/Home.css
@@ -50,15 +50,42 @@ body .container {
     padding: 5px;
 }
 
+.sectionCards{
+    overflow-x: auto;
+}
+
+
 .card {
     border: 3px solid #E2B616;
     max-height: 500px;
     overflow-y: auto;
-    overflow-x: none;
+    overflow-x: hidden;
+    border-radius: 5px;
+    width: 18rem;
+    height: 100%;
 }
+
+
+.card::-webkit-scrollbar {
+    width: 4px;
+}
+
+.card::-webkit-scrollbar-track {
+    background: #000;
+}
+
+.card::-webkit-scrollbar-thumb {
+    background: #E2B616;
+}
+
+.card::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 
 .card-body {
     color: white;
+    background-color: #000;
 }
 
 .card-title {
@@ -70,19 +97,11 @@ body .container {
 }
 
 .img-card-noticia  {
-    width: 7.5rem;
-    height: min-content;
+    width: 100%;
+    height: 200px
 }
 
 .img-noticia {
-    align-items: center;
-    max-height: max-content;
-    min-height: min-content;
-}
-
-.cardUm, .cardDois, .cardTres{
-    margin: 5px;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
 }
 
