--- a/Menu/Menu.css
+++ b/Menu/Menu.css
@@ -1,7 +1,9 @@
-
 #home-header {
-    height: 10vh;
-    background-color: #121212;
+    height: 3.5rem;
+    background-image: url(./apresentacao/rolo-filme.jpg);
+    background-repeat: repeat;
+    background-position: center;
+    background-size: auto;
     color: white;
     border-bottom: 4px solid #E2B616;
 }
