--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,7 +1,10 @@
 
 #home-footer {
-    height: 10vh;
-    background-color: #121212;
+    height: 7rem;
+    background-image: url(./apresentacao/rolo-filme.jpg);
+    background-repeat: repeat;
+    background-position: center;
+    background-size: auto;
     color: white;
     border-bottom: 4px solid #E2B616;
 }
