--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 * {
-    background-color: #000;
     margin: 0;
     padding: 0;
 }
+
 body {
+    background-image: url(./apresentacao/rolo-filme.jpg);
+    background-repeat: repeat;
+    background-position: center;
+    background-size: contain;
     font-family: Arial, sans-serif;
+    color: #D0B312;
 }
 
 main {
@@ -29,7 +34,7 @@ main {
 
 .input-container button {
     background-color: #D0B312;
-    color: #000;
+    color: #312b06;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
@@ -56,7 +61,6 @@ main {
 }
 
 .filters {
-    background-color: #000;
     padding: 20px;
 }
 
@@ -76,6 +80,7 @@ label {
 input[type="text"],
 textarea,
 select {
+    background-color: #000;
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -83,10 +88,14 @@ select {
     color: #D0B312;
 }
 
+
 button {
     background-color: #D0B312;
-    color: #000;
-    padding: 10px 20px;
+    color: #463d04;
+    height: 1.5rem;
+    padding: 1.5rem;
+    text-align: center;
+    line-height: .3rem;
     border: none;
     cursor: pointer;
     -webkit-box-shadow: 8px 5px 4px -2px rgba(77,73,5,0.85); 
@@ -115,7 +124,7 @@ button:hover {
     padding: 20px;
     text-align: center;
     color: #808080;
-    background-color: #000;
+    
     margin: auto;
     overflow: auto;
 }
@@ -125,6 +134,7 @@ button:hover {
     align-items: center;
     justify-content: center;
     text-align: center;
+    text-shadow: 5px 5px 8px rgba(0, 0, 0, 0.7);
 }
 
 .comment img {
@@ -136,6 +146,8 @@ button:hover {
     padding: 20px;
     margin: auto;
 }
+
+
 
 a {
     color: #DAA520;
@@ -150,16 +162,19 @@ a:hover {
 h1 {
     color: #B8860B;
     text-align: center;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
 }
 
 h2 {
     color: #DAA520;
     text-align: center;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
 }
 
 h3 {
     color: #BDB76B;
     text-align: center;
+    text-shadow: 10rem #000;
 }
 
 
@@ -169,6 +184,7 @@ p {
     width: auto;
     height: auto;
     justify-content: center;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
 }
 
 .texto {
@@ -177,12 +193,14 @@ p {
     width: 250px;
     height: auto;
     font-family: 'Times New Roman', Times, serif;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
 }
 
 p .texto {
     margin: 0;
     justify-content: center;
     align-items: center;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
 }
 
 #filme-serie {
@@ -237,7 +255,7 @@ img:hover {
 }
 
 .star-rating {
-    font-size: 24px; /* Ajuste o tamanho das estrelas conforme necessário */
+    font-size: 24px; 
     padding: 5px;
     border: none;
     background-color: transparent;
@@ -283,3 +301,57 @@ img:hover {
     margin-top: 5rem;
     margin-bottom: 1rem;
 }
+
+.destaque-container {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(8rem, 1fr));
+    gap: 2rem;
+    text-align: center;
+    padding: 2rem;
+}
+
+.destaque-container .dest {
+    align-self: center;
+}
+
+.img-dest {
+    width: 100%;
+    height: auto; 
+    object-fit: cover;
+ }
+
+.sobre {
+    height: 22rem;
+    overflow: auto;
+    border-left: 2px solid #E2B616;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
+}
+
+.sobre-vida, .sobre-obra {
+    width: 100%;
+    height: auto;
+    margin: 1rem;
+    border-left: solid #E2B616;
+    text-shadow: 1.5rem 1.5rem 3rem #000;
+
+}
+
+.destaque-container button {
+    align-self: end;
+ }
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+  
+  
+::-webkit-scrollbar-thumb {
+    background-color: #D0B312; 
+    border-radius: 6px;
+}
+  
+  
+::-webkit-scrollbar-thumb:hover {
+    background-color: #B59E0F; 
+}
+  
