--- a/Home.css
+++ b/Home.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(./apresentacao/rolo-filme.jpg);
+    background-image: url(./apresentacao/dourado.jpg);
     background-repeat: repeat;
     background-position: center;
     background-size: contain;
