--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url(./apresentacao/dourado.jpg);
+    background-image: url(./apresentacao/dark-grey-bg.jpg);
     background-repeat: round;
     background-position: center;
     background-size: contain;
